<resources>
    <string name="app_name">Aula03</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="activity2text">Activity 2</string>
    <string name="voltar">Voltar</string>
    <string name="titleSplashScreen">Meça suas palavras parça!</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="gravar_dados">Gravar Dados</string>
    <string name="dados_conta">FIAP Notas - Dados da conta</string>
    <string name="excluir_dados">Excluir Dados</string>
    <string name="caregar_dados">Carregar Dados</string>
    <string name="verificar_dados">Verificar Dados</string>
    <string name="excluir_arquivo">Excluir Arquivo</string>
    <string name="carregar_arquivo">Carregar Arquivo</string>
    <string name="gravar_arquivo">Gravar Arquivo</string>
    <string name="ler_arquivo">Ler Aquivo</string>
    <string name="primeiro_acesso">Primeiro Acesso</string>
    <string name="dados_nook">Preencha todos os dados corretamente</string>
    <string name="dados_ok">Dados gravados com sucesso</string>
    <string name="exclusao_ok">Chaves excluídas com sucess</string>
    <string name="dados_login_ok">Dados de login existentes</string>
    <string name="dados_login_no_ok">Dados de login inexistentes</string>
    <string name="arquivo_ok">Arquivo gravado</string>
    <string name="arquivo_excluido">Aquivo excluído com sucesso!</string>
</resources>
